Fix vertical scrollbar for posters. HFP-1253

--- a/src/styles/interactive-video.css
+++ b/src/styles/interactive-video.css
@@ -368,6 +368,7 @@
   left: 0;
   height: 100%;
   width: 100%;
+  overflow-y: auto;
 }
 
 .h5p-interactive-video .h5p-interaction-inner,
